--- a/keggle/desafio.ipynb
+++ b/keggle/desafio.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +224,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diretório engineer criado com sucesso!\n",
+      "Diretório raw criado com sucesso!\n",
+      "Diretório refined criado com sucesso!\n",
+      "Diretório transient criado com sucesso!\n",
+      "Diretório trusted criado com sucesso!\n"
+     ]
+    }
+   ],
    "source": [
     "for i in lista_folders:\n",
     "    diretorio = \"/home/michel/opt/keggle\" \n",
@@ -248,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,9 +348,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/michel/.kaggle/kaggle.json'\n",
+      "Downloading brazilian-ecommerce.zip to /home/michel/opt/keggle/transient\n",
+      "100%|██████████████████████████████████████| 42.6M/42.6M [00:13<00:00, 3.06MB/s]\n",
+      "100%|██████████████████████████████████████| 42.6M/42.6M [00:13<00:00, 3.42MB/s]\n",
+      "Archive:  brazilian-ecommerce.zip\n",
+      "  inflating: olist_customers_dataset.csv  \n",
+      "  inflating: olist_geolocation_dataset.csv  \n",
+      "  inflating: olist_order_items_dataset.csv  \n",
+      "  inflating: olist_order_payments_dataset.csv  \n",
+      "  inflating: olist_order_reviews_dataset.csv  \n",
+      "  inflating: olist_orders_dataset.csv  \n",
+      "  inflating: olist_products_dataset.csv  \n",
+      "  inflating: olist_sellers_dataset.csv  \n",
+      "  inflating: product_category_name_translation.csv  \n",
+      "Arquivo carregado e descompactado.\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists('/home/michel/opt/keggle/transient/brazilian-ecommerce.zip'):\n",
     "    !cd /home/michel/opt/keggle/transient/ && kaggle datasets download -d olistbr/brazilian-ecommerce\n",
@@ -358,9 +392,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path_transient</th>\n",
+       "      <th>path_raw</th>\n",
+       "      <th>table_transient</th>\n",
+       "      <th>table_raw</th>\n",
+       "      <th>table_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_customers_dataset</td>\n",
+       "      <td>olist_customers_dataset</td>\n",
+       "      <td>stg_customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_geolocation_dataset</td>\n",
+       "      <td>olist_geolocation_dataset</td>\n",
+       "      <td>stg_geolocation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_order_items_dataset</td>\n",
+       "      <td>olist_order_items_dataset</td>\n",
+       "      <td>stg_items</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_order_payments_dataset</td>\n",
+       "      <td>olist_order_payments_dataset</td>\n",
+       "      <td>stg_payments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_order_reviews_dataset</td>\n",
+       "      <td>olist_order_reviews_dataset</td>\n",
+       "      <td>stg_reviews</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_orders_dataset</td>\n",
+       "      <td>olist_orders_dataset</td>\n",
+       "      <td>stg_orders</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_products_dataset</td>\n",
+       "      <td>olist_products_dataset</td>\n",
+       "      <td>stg_products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_sellers_dataset</td>\n",
+       "      <td>olist_sellers_dataset</td>\n",
+       "      <td>stg_sellers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      path_transient                     path_raw   \n",
+       "0  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw  \\\n",
+       "1  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "2  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "3  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "4  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "5  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "6  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "7  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "\n",
+       "                table_transient                     table_raw       table_name  \n",
+       "0       olist_customers_dataset       olist_customers_dataset    stg_customers  \n",
+       "1     olist_geolocation_dataset     olist_geolocation_dataset  stg_geolocation  \n",
+       "2     olist_order_items_dataset     olist_order_items_dataset        stg_items  \n",
+       "3  olist_order_payments_dataset  olist_order_payments_dataset     stg_payments  \n",
+       "4   olist_order_reviews_dataset   olist_order_reviews_dataset      stg_reviews  \n",
+       "5          olist_orders_dataset          olist_orders_dataset       stg_orders  \n",
+       "6        olist_products_dataset        olist_products_dataset     stg_products  \n",
+       "7         olist_sellers_dataset         olist_sellers_dataset      stg_sellers  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path = pd.read_csv('/home/michel/opt/keggle/engineer/controller.csv')\n",
     "path"
@@ -376,9 +534,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/michel/opt/keggle/transient/olist_customers_dataset.csv\n",
+      "/home/michel/opt/keggle/raw/olist_customers_dataset.parquet\n"
+     ]
+    }
+   ],
    "source": [
     "print(path['path_transient'][0] + '/' + path['table_transient'][0] + '.csv')\n",
     "print(path['path_raw'][0] + '/' + path['table_raw'][0] + '.parquet')"
@@ -386,16 +553,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(path['path_transient']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,9 +762,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'import mysql.connector\\n\\n# Conectando ao banco de dados MySQL\\ncnx = mysql.connector.connect(\\n    host=\\'localhost\\',\\n    user=\\'root\\',\\n    password=senha_db[\\'senha\\'][0],\\n    database=\\'staging_olist_db\\'\\n)\\n\\n# Criar um cursor\\ncursor = cnx.cursor()\\n\\nlista = []\\nfor i in range(len(lista_tabelas)):\\n   lista.append(lista_tabelas[i][1])\\nlista\\n\\n# Loop para dropar as tabelas\\nfor tabela in lista:\\n    cursor.execute(f\"DROP TABLE IF EXISTS {tabela}\")\\n\\n# Confirmar as alterações\\ncnx.commit()\\n\\n# Fechar a conexão\\ncursor.close()\\ncnx.close()'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"import mysql.connector\n",
     "\n",
@@ -631,9 +817,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path_transient</th>\n",
+       "      <th>path_raw</th>\n",
+       "      <th>table_transient</th>\n",
+       "      <th>table_raw</th>\n",
+       "      <th>table_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_customers_dataset</td>\n",
+       "      <td>olist_customers_dataset</td>\n",
+       "      <td>stg_customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_geolocation_dataset</td>\n",
+       "      <td>olist_geolocation_dataset</td>\n",
+       "      <td>stg_geolocation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_order_items_dataset</td>\n",
+       "      <td>olist_order_items_dataset</td>\n",
+       "      <td>stg_items</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_order_payments_dataset</td>\n",
+       "      <td>olist_order_payments_dataset</td>\n",
+       "      <td>stg_payments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_order_reviews_dataset</td>\n",
+       "      <td>olist_order_reviews_dataset</td>\n",
+       "      <td>stg_reviews</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_orders_dataset</td>\n",
+       "      <td>olist_orders_dataset</td>\n",
+       "      <td>stg_orders</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_products_dataset</td>\n",
+       "      <td>olist_products_dataset</td>\n",
+       "      <td>stg_products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>/home/michel/opt/keggle/transient</td>\n",
+       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>olist_sellers_dataset</td>\n",
+       "      <td>olist_sellers_dataset</td>\n",
+       "      <td>stg_sellers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      path_transient                     path_raw   \n",
+       "0  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw  \\\n",
+       "1  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "2  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "3  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "4  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "5  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "6  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "7  /home/michel/opt/keggle/transient  /home/michel/opt/keggle/raw   \n",
+       "\n",
+       "                table_transient                     table_raw       table_name  \n",
+       "0       olist_customers_dataset       olist_customers_dataset    stg_customers  \n",
+       "1     olist_geolocation_dataset     olist_geolocation_dataset  stg_geolocation  \n",
+       "2     olist_order_items_dataset     olist_order_items_dataset        stg_items  \n",
+       "3  olist_order_payments_dataset  olist_order_payments_dataset     stg_payments  \n",
+       "4   olist_order_reviews_dataset   olist_order_reviews_dataset      stg_reviews  \n",
+       "5          olist_orders_dataset          olist_orders_dataset       stg_orders  \n",
+       "6        olist_products_dataset        olist_products_dataset     stg_products  \n",
+       "7         olist_sellers_dataset         olist_sellers_dataset      stg_sellers  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path = pd.read_csv('/home/michel/opt/keggle/engineer/controller.csv')\n",
     "path"
@@ -658,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
