Reinderizando todo o cádigo

--- a/kaggle_olist/desafio.ipynb
+++ b/kaggle_olist/desafio.ipynb
@@ -54,12 +54,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Os processos de engenharia de dados (data engineering) são etapas sequenciais usadas para transformar e gerenciar dados em um pipeline de processamento. Esses processos são realizados em várias etapas, começando pelos dados brutos e terminando com os dados confiáveis e prontos para análise. Aqui está uma explicação de cada processo em ordem de execução:\n",
+    "\n",
+    "* Processo de Raw Data (Dados Brutos):\n",
+    "Nesta fase inicial, os dados brutos são coletados de várias fontes, como bancos de dados, arquivos CSV, APIs, feeds de streaming, entre outros. Esses dados podem estar em formatos diversos e podem conter ruído, inconsistências e falta de estrutura. O objetivo do processo de Dados Brutos é extrair e armazenar esses dados em seu estado bruto original.\n",
+    "\n",
+    "* Processo de Data Engineering (Engenharia de Dados):\n",
+    "Nesta etapa, os dados brutos são processados e transformados em um formato adequado para análise e uso posterior. Isso envolve atividades como limpeza de dados, padronização de formatos, filtragem de dados inválidos ou incompletos, remoção de duplicatas e criação de estruturas de dados otimizadas para consultas e processamento eficiente. O objetivo é obter dados estruturados e refinados que possam ser usados em análises e outros processos.\n",
+    "\n",
+    "* Processo de Refined Data (Dados Refinados):\n",
+    "Nesta fase, os dados processados são refinados ainda mais para atender a requisitos específicos de negócios e análise. Isso pode incluir agregação de dados, cálculos adicionais, enriquecimento com informações adicionais, como dados geográficos ou dados de terceiros, e transformações personalizadas para atender às necessidades específicas dos usuários finais. O objetivo é fornecer dados refinados e mais valiosos para análise e tomada de decisão.\n",
+    "\n",
+    "* Processo de Transient Data (Dados Transitórios):\n",
+    "Os dados transitórios são dados temporários ou de curta duração usados para processamento e transformação intermediários. Esses dados podem ser gerados durante o processamento em tempo real, pipelines de processamento de dados em lote ou durante a integração de diferentes fontes de dados. Os dados transitórios são normalmente armazenados em sistemas de processamento de fluxo de dados ou bancos de dados temporários, e seu objetivo é suportar operações intermediárias antes que os dados sejam refinados e confiáveis.\n",
+    "\n",
+    "* Processo de Trusted Data (Dados Confiáveis):\n",
+    "Nesta fase final, os dados são considerados confiáveis, prontos para uso e adequados para análise e tomada de decisão. Isso envolve garantir a qualidade dos dados, validar a precisão, consistência e integridade dos dados, aplicar regras de negócios e conformidade, bem como implementar mecanismos de controle de qualidade. O objetivo é fornecer dados confiáveis que possam ser usados com confiança para análise, geração de relatórios e outras tarefas de negócios."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Carregando as bibliotecas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip install pyarrow\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1 - Data Raw"
    ]
   },
   {
@@ -97,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,18 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Diretório engineer criado com sucesso!\n",
-      "Diretório raw criado com sucesso!\n",
-      "Diretório refined criado com sucesso!\n",
-      "Diretório transient criado com sucesso!\n",
-      "Diretório trusted criado com sucesso!\n"
+      "O diretório engineer já existe.\n",
+      "O diretório raw já existe.\n",
+      "O diretório refined já existe.\n",
+      "O diretório transient já existe.\n",
+      "O diretório trusted já existe.\n",
+      "Pasta parquet já existe;\n"
      ]
     }
    ],
@@ -131,7 +163,12 @@
     "        os.makedirs(diretorio + '/' + i)\n",
     "        print(f\"Diretório {i} criado com sucesso!\")\n",
     "    else:\n",
-    "        print(f\"O diretório {i} já existe.\")\n"
+    "        print(f\"O diretório {i} já existe.\")\n",
+    "if not os.path.exists(diretorio + '/' + '/raw' + '/parquet'):\n",
+    "    os.makedirs(diretorio + '/' + '/raw' + '/parquet')\n",
+    "    print('Pasta parquet criada.')\n",
+    "else:\n",
+    "    print('Pasta parquet já existe;')"
    ]
   },
   {
@@ -144,15 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Caminho do arquivo CSV\n",
-    "caminho_arquivo = str(path_folder[0]) + '/' + 'engineer/controller.csv'\n",
+    "caminho_arquivo = str(path_folder[0]) + '/' + 'controller.csv'\n",
     "dados = [\n",
     "[\"path_transient\",\"path_raw\",\"table_transient\",\"table_raw\", \"table_name\"],\n",
-    "[str(path_folder[0]) + '/' + \"transient\",\"/home/michel/opt/keggle/raw\",\"olist_customers_dataset\",\"olist_customers_dataset\",\"stg_customers\"],\n",
+    "[str(path_folder[0]) + '/' + \"transient\",str(path_folder[0]) + '/' + \"raw\",\"olist_customers_dataset\",\"olist_customers_dataset\",\"stg_customers\"],\n",
     "[str(path_folder[0]) + '/' + \"transient\",str(path_folder[0]) + '/' + \"raw\",\"olist_geolocation_dataset\",\"olist_geolocation_dataset\",\"stg_geolocation\"],\n",
     "[str(path_folder[0]) + '/' + \"transient\",str(path_folder[0]) + '/' + \"raw\",\"olist_order_items_dataset\",\"olist_order_items_dataset\",\"stg_items\"],\n",
     "[str(path_folder[0]) + '/' + \"transient\",str(path_folder[0]) + '/' + \"raw\",\"olist_order_payments_dataset\",\"olist_order_payments_dataset\",\"stg_payments\"],\n",
@@ -207,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,53 +269,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/michel/opt/kaggle_olist/transient\n"
+      "/home/michel/opt/kaggle_olist/raw\n"
      ]
     }
    ],
    "source": [
-    "print(str(path_folder[0]) + '/' + 'transient')"
+    "print(str(path_folder[0]) + '/' + 'raw')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/michel/.kaggle/kaggle.json'\n",
-      "Downloading brazilian-ecommerce.zip to /home/michel/opt/kaggle_olist/transient\n",
-      "100%|██████████████████████████████████████| 42.6M/42.6M [00:11<00:00, 4.11MB/s]\n",
-      "100%|██████████████████████████████████████| 42.6M/42.6M [00:11<00:00, 4.04MB/s]\n",
-      "Archive:  brazilian-ecommerce.zip\n",
-      "  inflating: olist_customers_dataset.csv  \n",
-      "  inflating: olist_geolocation_dataset.csv  \n",
-      "  inflating: olist_order_items_dataset.csv  \n",
-      "  inflating: olist_order_payments_dataset.csv  \n",
-      "  inflating: olist_order_reviews_dataset.csv  \n",
-      "  inflating: olist_orders_dataset.csv  \n",
-      "  inflating: olist_products_dataset.csv  \n",
-      "  inflating: olist_sellers_dataset.csv  \n",
-      "  inflating: product_category_name_translation.csv  \n",
-      "Arquivo carregado e descompactado.\n"
+      "Arquivo já existe.\n"
      ]
     }
    ],
    "source": [
-    "if not os.path.exists(str(path_folder[0]) + '/' + 'transient/brazilian-ecommerce.zip'):\n",
+    "if not os.path.exists(str(path_folder[0]) + '/' + 'raw/brazilian-ecommerce.zip'):\n",
     "    \n",
     "    r = !pwd\n",
-    "    PATH_FOLDER = r[0] + '/transient'\n",
+    "    PATH_FOLDER = r[0] + '/raw'\n",
     "    os.environ['PATH_FOLDER'] = PATH_FOLDER\n",
     "\n",
     "    !cd $PATH_FOLDER && kaggle datasets download -d olistbr/brazilian-ecommerce\n",
@@ -293,12 +316,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Criando as variáveis necessárias para manipulação dos arquivos csv's"
+    "## Carregando tabela com os path necessários para manipulação dos arquivos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +356,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>/home/michel/opt/kaggle_olist/transient</td>\n",
-       "      <td>/home/michel/opt/keggle/raw</td>\n",
+       "      <td>/home/michel/opt/kaggle_olist/raw</td>\n",
        "      <td>olist_customers_dataset</td>\n",
        "      <td>olist_customers_dataset</td>\n",
        "      <td>stg_customers</td>\n",
@@ -400,7 +423,7 @@
       ],
       "text/plain": [
        "                            path_transient                           path_raw   \n",
-       "0  /home/michel/opt/kaggle_olist/transient        /home/michel/opt/keggle/raw  \\\n",
+       "0  /home/michel/opt/kaggle_olist/transient  /home/michel/opt/kaggle_olist/raw  \\\n",
        "1  /home/michel/opt/kaggle_olist/transient  /home/michel/opt/kaggle_olist/raw   \n",
        "2  /home/michel/opt/kaggle_olist/transient  /home/michel/opt/kaggle_olist/raw   \n",
        "3  /home/michel/opt/kaggle_olist/transient  /home/michel/opt/kaggle_olist/raw   \n",
@@ -420,13 +443,13 @@
        "7         olist_sellers_dataset         olist_sellers_dataset      stg_sellers  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = pd.read_csv(str(path_folder[0]) + '/' + 'engineer/controller.csv')\n",
+    "path = pd.read_csv(str(path_folder[0]) + '/' + 'controller.csv')\n",
     "path"
    ]
   },
@@ -435,12 +458,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testando a formação das rotas"
+    "### Testando a formação dos path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +471,7 @@
      "output_type": "stream",
      "text": [
       "/home/michel/opt/kaggle_olist/transient/olist_customers_dataset.csv\n",
-      "/home/michel/opt/keggle/raw/olist_customers_dataset.parquet\n"
+      "/home/michel/opt/kaggle_olist/raw/olist_customers_dataset.parquet\n"
      ]
     }
    ],
@@ -459,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -484,14 +507,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(path['path_transient'])):\n",
-    "    df = pd.read_csv(path['path_transient'][i] + '/' + path['table_transient'][i] + '.csv')\n",
+    "for i in range(len(path['path_raw'])):\n",
+    "    df = pd.read_csv(path['path_raw'][i] + '/' + path['table_raw'][i] + '.csv')\n",
     "    df = df.astype('str')\n",
-    "    df.to_parquet(str(path['path_raw'][i]) + '/' + str(path['table_raw'][i]) + '.parquet')\n"
+    "    df.to_parquet(str(path['path_raw'][i]) + '/' + 'parquet' + '/' + str(path['table_raw'][i]) + '.parquet')\n"
    ]
   },
   {
@@ -504,15 +527,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(path['path_transient'])):\n",
-    "    df_clear_duplicates = pd.read_parquet(str(path['path_raw'][i]) + '/' + str(path['table_raw'][i]) + '.parquet')\n",
+    "for i in range(len(path['path_raw'])):\n",
+    "    df_clear_duplicates = pd.read_parquet(str(path['path_raw'][i]) + '/' + 'parquet' + '/' + str(path['table_raw'][i]) + '.parquet')\n",
     "    coluna = df_clear_duplicates.columns[0]\n",
     "    df_clear_duplicates.drop_duplicates(subset=coluna, inplace=True)\n",
-    "    df_clear_duplicates.to_parquet(str(path['path_raw'][i]) + '/' + str(path['table_raw'][i]) + '.parquet')"
+    "    df_clear_duplicates.to_parquet(str(path['path_raw'][i]) + '/' + 'parquet' + '/' + str(path['table_raw'][i]) + '.parquet')"
    ]
   }
  ],
