Problemas com o kernel do jupyter

--- a/keggle/desafio.ipynb
+++ b/keggle/desafio.ipynb
@@ -54,116 +54,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diagrama Entidade Relacionamento"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Entidades:\n",
-    "- Cliente (Customer)\n",
-    "- Pedido (Order)\n",
-    "- Item do Pedido (Order Item)\n",
-    "- Produto (Product)\n",
-    "- Vendedor (Seller)\n",
-    "- Categoria de Produto (Product Category)\n",
-    "- Avaliação (Review)\n",
-    "- Localização Geográfica (Geolocation)\n",
+    "### Os processos de engenharia de dados (data engineering) são etapas sequenciais usadas para transformar e gerenciar dados em um pipeline de processamento. Esses processos são realizados em várias etapas, começando pelos dados brutos e terminando com os dados confiáveis e prontos para análise. Aqui está uma explicação de cada processo em ordem de execução:\n",
     "\n",
-    "Relacionamentos:\n",
-    "- O Cliente (Customer) pode fazer vários Pedidos (Order)\n",
-    "- Um Pedido (Order) pertence a um único Cliente (Customer)\n",
-    "- Um Pedido (Order) possui vários Itens do Pedido (Order Item)\n",
-    "- Cada Item do Pedido (Order Item) está associado a um único Produto (Product)\n",
-    "- Um Produto (Product) pertence a uma Categoria de Produto (Product Category)\n",
-    "- Um Produto (Product) é vendido por um Vendedor (Seller)\n",
-    "- Um Pedido (Order) pode ter várias Avaliações (Review)\n",
-    "- Cada Avaliação (Review) está associada a um único Pedido (Order)\n",
-    "- Cada Vendedor (Seller) está associado a uma Localização Geográfica (Geolocation)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* PAYMENT:\n",
-    "    * pk_payment_order_id (chave primária)\n",
-    "    * fk_order_id (chave estrangeira referenciando ORDERS)\n",
-    "    * payment_sequential\n",
-    "    * payment_type\n",
-    "    * payment_installments\n",
-    "    * payment_value\n",
+    "* Processo de Raw Data (Dados Brutos):\n",
+    "Nesta fase inicial, os dados brutos são coletados de várias fontes, como bancos de dados, arquivos CSV, APIs, feeds de streaming, entre outros. Esses dados podem estar em formatos diversos e podem conter ruído, inconsistências e falta de estrutura. O objetivo do processo de Dados Brutos é extrair e armazenar esses dados em seu estado bruto original.\n",
     "\n",
-    "****\n",
+    "* Processo de Data Engineering (Engenharia de Dados):\n",
+    "Nesta etapa, os dados brutos são processados e transformados em um formato adequado para análise e uso posterior. Isso envolve atividades como limpeza de dados, padronização de formatos, filtragem de dados inválidos ou incompletos, remoção de duplicatas e criação de estruturas de dados otimizadas para consultas e processamento eficiente. O objetivo é obter dados estruturados e refinados que possam ser usados em análises e outros processos.\n",
     "\n",
-    "* PRODUCT:\n",
-    "    * pk_product_id (chave primária)\n",
-    "    * product_category\n",
-    "    * product_name\n",
-    "    \n",
-    "****\n",
+    "* Processo de Refined Data (Dados Refinados):\n",
+    "Nesta fase, os dados processados são refinados ainda mais para atender a requisitos específicos de negócios e análise. Isso pode incluir agregação de dados, cálculos adicionais, enriquecimento com informações adicionais, como dados geográficos ou dados de terceiros, e transformações personalizadas para atender às necessidades específicas dos usuários finais. O objetivo é fornecer dados refinados e mais valiosos para análise e tomada de decisão.\n",
     "\n",
-    "* REVIEW:\n",
-    "    * pk_review_id (chave primária)\n",
-    "    * fk_order_id (chave estrangeira referenciando ORDERS)\n",
-    "    * review_score\n",
-    "    * review_comment_title\n",
-    "    * review_comment_message\n",
-    "    * review_creation_date\n",
-    "    * review_answer_timestamp\n",
-    "    \n",
-    "****\n",
+    "* Processo de Transient Data (Dados Transitórios):\n",
+    "Os dados transitórios são dados temporários ou de curta duração usados para processamento e transformação intermediários. Esses dados podem ser gerados durante o processamento em tempo real, pipelines de processamento de dados em lote ou durante a integração de diferentes fontes de dados. Os dados transitórios são normalmente armazenados em sistemas de processamento de fluxo de dados ou bancos de dados temporários, e seu objetivo é suportar operações intermediárias antes que os dados sejam refinados e confiáveis.\n",
     "\n",
-    "* ORDERS:\n",
-    "    * pk_order_id (chave primária)\n",
-    "    * fk_payment_order_id (chave estrangeira referenciando PAYMENT)\n",
-    "    * fk_customer_id (chave estrangeira referenciando CUSTOMER)\n",
-    "    * order_status\n",
-    "    * order_purchase_timestamp\n",
-    "    * order_approved_at\n",
-    "    * order_delivered_carrier_date\n",
-    "    * order_delivered_customer_date\n",
-    "    * order_estimated_delivery_date\n",
-    "    \n",
-    "****\n",
-    "\n",
-    "* ORDER_ITEM:\n",
-    "    * pk_order_item_id (chave primária)\n",
-    "    * fk_order_id (chave estrangeira referenciando ORDERS)\n",
-    "    * fk_product_id (chave estrangeira referenciando PRODUCT)\n",
-    "    * fk_seller_id (chave estrangeira referenciando SELLERS)\n",
-    "    * shipping_limit_date\n",
-    "    * price\n",
-    "    * freight_value\n",
-    "    \n",
-    "****\n",
-    "\n",
-    "* SELLERS:\n",
-    "    * pk_seller_id (chave primária)\n",
-    "    * fk_geolocation_zip_code_prefix (chave estrangeira referenciando GEOLOCATION)\n",
-    "    * seller_city\n",
-    "    * seller_state\n",
-    "    \n",
-    "****\n",
-    "\n",
-    "* CUSTOMER:\n",
-    "    * pk_customer_id (chave primária)\n",
-    "    * fk_zip_code_prefix (chave estrangeira referenciando GEOLOCATION)\n",
-    "    * customer_unique_id\n",
-    "    * customer_city\n",
-    "    * customer_state\n",
-    "    \n",
-    "****\n",
-    "\n",
-    "* GEOLOCATION:\n",
-    "    * pk_geolocation_zip_code_prefix (chave primária)\n",
-    "    * geolocation_lat\n",
-    "    * geolocation_lng\n",
-    "    * geolocation_city\n",
-    "    * geolocation_state"
+    "* Processo de Trusted Data (Dados Confiáveis):\n",
+    "Nesta fase final, os dados são considerados confiáveis, prontos para uso e adequados para análise e tomada de decisão. Isso envolve garantir a qualidade dos dados, validar a precisão, consistência e integridade dos dados, aplicar regras de negócios e conformidade, bem como implementar mecanismos de controle de qualidade. O objetivo é fornecer dados confiáveis que possam ser usados com confiança para análise, geração de relatórios e outras tarefas de negócios."
    ]
   },
   {
@@ -569,6 +475,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convertendo os arquivos CSV em .partquet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -578,6 +492,14 @@
     "    df = pd.read_csv(path['path_transient'][i] + '/' + path['table_transient'][i] + '.csv')\n",
     "    df = df.astype('str')\n",
     "    df.to_parquet(str(path['path_raw'][i]) + '/' + str(path['table_raw'][i]) + '.parquet')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carregando os arquivos parquet e eliminando as duplicadas do id da primeira coluna"
    ]
   },
   {
